--- a/level1/question1/index.html
+++ b/level1/question1/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript - MA03 - Question 1</title>
 </head>
+
 <body>
+    <form id="myForm" action="file:///Users/marierogler/Desktop/Noroff/2%20Semester/JavaScript_MA3/javascript-ma3-master/level1/question1/index.html">
+        First name: <input type="text" name="firstName"><br> Last name: <input type="text" name="lastName"><br> Mail: <input type="email" name="mail"><br> Phone: <input type="tel" name="Telephone number"><br>
+        <input type="button" onclick="submitFormButtonPressed()" value="Submit">
+    </form>
 
-<!--Contact Form-->
-
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
