removing unnecessary url

--- a/level1/question1/index.html
+++ b/level1/question1/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <form id="myForm" action="file:///Users/marierogler/Desktop/Noroff/2%20Semester/JavaScript_MA3/javascript-ma3-master/level1/question1/index.html">
-        First name: <input type="text" name="firstName"><br> Last name: <input type="text" name="lastName"><br> Mail: <input type="email" name="mail"><br> Phone: <input type="tel" name="Telephone number"><br>
+    <form name="myForm">
+        First name: <input type="text" name="firstName"><br> Last name: <input type="text" name="lastName"><br> Mail: <input type="email" name="email"><br> Phone: <input type="tel" name="phone"><br>
         <input type="button" onclick="submitFormButtonPressed()" value="Submit">
     </form>
 
